<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frh_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:layout_marginTop="55dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_book_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_book_name"
            style="@style/coolerText"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/tv_book_isbn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_name_id"
            android:layout_alignParentStart="true"
            android:text="@string/tv_book_isbn"
            style="@style/coolerText"/>
        <EditText
            android:id="@+id/et_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_book_name_id"
            android:hint="@string/et_book_name_example" />

        <EditText
            android:id="@+id/et_book_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_name_id"
            android:layout_toEndOf="@id/tv_book_isbn_id"
            android:hint="@string/et_book_isbn_example" />

            <Button
                android:id="@+id/btn_add_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_book_isbn_id"
                android:text="@string/btn_add_book"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

    </RelativeLayout>

</FrameLayout>